js/js.translator/testData/incremental/invalidation/mainFunctionSelectPlainAndArgs/main/a.1.kt
package a

fun main() {
    value.ok += "A1"
}
